Mobile Menu Bug Fix
Mobile cutoff adjustment

--- a/source/stylesheets/partials/_nav.scss
+++ b/source/stylesheets/partials/_nav.scss
@@ -87,7 +87,7 @@ header {
 	z-index:20;
 	position:relative;
 	ul {
-		height:12px;
+		height:18px;
 		overflow:hidden;
 		margin-right: -50px;
 	}
